--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -66,9 +66,9 @@
         "type": "header",
         "settings": {
           "main_menu_link_list": "main-menu",
-          "logo": "",
+          "logo": "shopify:\/\/shop_images\/LOGO.png",
           "logo-inverted": "",
-          "logo_max_width": "180",
+          "logo_max_width": "60",
           "search": "modal",
           "show_announcement": false,
           "home_page_only": true,
@@ -84,7 +84,7 @@
           "slideshow-0": {
             "type": "slide",
             "settings": {
-              "image": "home-background.jpg",
+              "image": "shopify:\/\/shop_images\/home-background.jpg",
               "slide_text_color": "is-dark",
               "slide_subheading": "",
               "slide_heading": "",
@@ -94,8 +94,7 @@
           }
         },
         "block_order": [
-          "slideshow-0",
-          "slideshow-1"
+          "slideshow-0"
         ],
         "settings": {
           "hero_home_auto": true,
