pw-home: tightened up background image

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -66,40 +66,16 @@
         "type": "header",
         "settings": {
           "main_menu_link_list": "main-menu",
-          "logo": "",
+          "logo": "shopify:\/\/shop_images\/LOGO.png",
           "logo-inverted": "",
-          "logo_max_width": "180",
+          "logo_max_width": "60",
           "search": "modal",
           "show_announcement": false,
-          "home_page_only": true,
+          "home_page_only": false,
           "text": "Announce something here",
           "link": "",
           "color_bg": "#1c1d1d",
           "color_text": "#ffffff"
-        }
-      },
-      "slideshow": {
-        "type": "slideshow",
-        "blocks": {
-          "slideshow-0": {
-            "type": "slide",
-            "settings": {
-              "image": "home-background.jpg",
-              "slide_text_color": "is-dark",
-              "slide_subheading": "",
-              "slide_heading": "",
-              "slide_cta": "",
-              "slide_link": ""
-            }
-          }
-        },
-        "block_order": [
-          "slideshow-0",
-          "slideshow-1"
-        ],
-        "settings": {
-          "hero_home_auto": true,
-          "home_hero_auto_speed": "5000"
         }
       },
       "featured-products": {
@@ -173,6 +149,99 @@
         "settings": {
           "footer_link_list": "footer"
         }
+      },
+      "slideshow-landing": {
+        "type": "slideshow-landing",
+        "blocks": {
+          "1500238527161": {
+            "type": "slide",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/OKL_Jen_Meyer_Makeover_384.jpg",
+              "slide_text_color": "is-dark",
+              "slide_subheading": "",
+              "slide_heading": "",
+              "slide_cta": "",
+              "slide_link": ""
+            }
+          },
+          "1500238544138": {
+            "type": "slide",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/slideshow_landing_2.jpg",
+              "slide_text_color": "is-dark",
+              "slide_subheading": "",
+              "slide_heading": "",
+              "slide_cta": "",
+              "slide_link": ""
+            }
+          }
+        },
+        "block_order": [
+          "1500238527161",
+          "1500238544138"
+        ],
+        "settings": {
+          "hero_home_auto": true,
+          "home_hero_auto_speed": "5000"
+        }
+      },
+      "slideshow-home": {
+        "type": "slideshow-home",
+        "blocks": {
+          "1500421410366": {
+            "type": "slide",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/Home.png",
+              "slide_text_color": "is-dark",
+              "slide_subheading": "",
+              "slide_heading": "",
+              "slide_cta": "",
+              "slide_link": ""
+            }
+          }
+        },
+        "block_order": [
+          "1500421410366"
+        ],
+        "settings": {
+          "hero_home_auto": true,
+          "home_hero_auto_speed": "5000"
+        }
+      },
+      "slideshow-portfolio": {
+        "type": "slideshow-portfolio",
+        "blocks": {
+          "1500421434012": {
+            "type": "slide",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/EBP2443_984e8ea7-d477-47a6-a35a-37e806d950fa.jpg",
+              "slide_text_color": "is-dark",
+              "slide_subheading": "",
+              "slide_heading": "",
+              "slide_cta": "",
+              "slide_link": ""
+            }
+          },
+          "1500421446932": {
+            "type": "slide",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/EBP2802.jpg",
+              "slide_text_color": "is-dark",
+              "slide_subheading": "",
+              "slide_heading": "",
+              "slide_cta": "",
+              "slide_link": ""
+            }
+          }
+        },
+        "block_order": [
+          "1500421434012",
+          "1500421446932"
+        ],
+        "settings": {
+          "hero_home_auto": true,
+          "home_hero_auto_speed": "5000"
+        }
       }
     },
     "content_for_index": []
@@ -225,24 +294,6 @@
             "color_bg": "#1c1d1d",
             "color_text": "#ffffff"
           }
-        },
-        "slideshow": {
-          "type": "slideshow",
-          "blocks": {
-            "slideshow-0": {
-              "type": "slide",
-              "settings": {}
-            },
-            "slideshow-1": {
-              "type": "slide",
-              "settings": {}
-            }
-          },
-          "block_order": [
-            "slideshow-0",
-            "slideshow-1"
-          ],
-          "settings": {}
         },
         "featured-products": {
           "type": "featured-products",
@@ -361,24 +412,6 @@
       "product_vendor_enable": false,
       "social_sharing_style": "clean",
       "sections": {
-        "slideshow": {
-          "type": "slideshow",
-          "blocks": {
-            "1495823280244": {
-              "type": "slide",
-              "settings": {
-                "slide_text_color": "is-light"
-              }
-            }
-          },
-          "block_order": [
-            "1495823280244"
-          ],
-          "settings": {
-            "hero_home_auto": false,
-            "home_hero_auto_speed": "5000"
-          }
-        },
         "featured-products": {
           "type": "featured-products",
           "settings": {
